--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.19.4",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.0.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss-loader": "^7.0.1",
